src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__issue_browser__issue_browser_filter_active.snap
---
source: src/tui/snapshot_tests/issue_browser.rs
expression: terminal.backend()
---
"╔═══════════════════════════════════════════════[ Issues — Filter: Add ]═══════════════════════════════════════════════╗"
"║  #1     Add login flow                                                                                              ║"
"║   #2     Fix database crash                                                                                          ║"
"║   #3     Add logout endpoint                                                                                         ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═════════════════════════════════════════════════════[ Preview ]══════════════════════════════════════════════════════╗"
"║Title: Add login flow                                                                                                 ║"
"║State: open  |  Labels: maestro:ready                                                                                 ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"[Enter] Run  [Space] Select  [/] Filter  [Esc] Back                                                                     "
