src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__issue_browser__issue_browser_multi_overlay_launch_options_default.snap
---
source: src/tui/snapshot_tests/issue_browser.rs
expression: terminal.backend()
---
"╔═════════════════════════════════════════════════════[ 󰝦 Issues ]═════════════════════════════════════════════════════╗"
"║  #1     Add login flow                                                                                              ║"
"║   #2     Fix database crash                                                                                          ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                   ╔═══════════════════════════[ 2 issues selected ]════════════════════════════╗                     ║"
"║                   ║Shared prompt for all sessions (optional):                                  ║                     ║"
"║                   ║╔══════════════════════════════════════════════════════════════════════════╗║                     ║"
"║                   ║║  #1     Add login flow                                                   ║║                     ║"
"║                   ║║  #2     Fix database crash                                               ║║                     ║"
"║                   ║╚══════════════════════════════════════════════════════════════════════════╝║                     ║"
"║                   ║  Unified PR (single branch, closes all issues)                            ║                     ║"
"║                   ║╔══════════════════════════════════════════════════════════════════════════╗║                     ║"
"║                   ║║Type your prompt here...                                                  ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"╚═══════════════════║║                                                                          ║║═════════════════════╝"
"╔═══════════════════║║                                                                          ║║═════════════════════╗"
"║Title: Add login fl║║                                                                          ║║                     ║"
"║State: open  |  Lab║║                                                                          ║║                     ║"
"║───────────────────║║                                                                          ║║───────────────────  ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║║                                                                          ║║                     ║"
"║                   ║╚══════════════════════════════════════════════════════════════════════════╝║                     ║"
"║                   ║Options (apply to all launched sessions):                                   ║                     ║"
"║                   ║   Produce PR — sessions end when a linked PR is created                   ║                     ║"
"║                   ║   Interaction — chat with the agent; sessions stay alive                  ║                     ║"
"║                   ║  [ Launch all ]                                                            ║                     ║"
"║                   ║[Enter] Launch all  [Tab] Next field  [Space] Toggle  [Ctrl+U] Unified PR  [║                     ║"
"║                   ╚════════════════════════════════════════════════════════════════════════════╝                     ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"[Tab] Switch pane  [Enter] Run  [Space] Select  [/] Filter  [Esc] Back                                                  "
